2008-07-16  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc: Use get_display_version instead of
	available_version in all the right places.

2008-07-15  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.h, src/main.cc (package_info::get_display_version):
	New.
	* src/util.cc (package_info_func): Use it instead of explicit
	code.
	* src/operations.cc (ip_install_with_info): Use it for the
	confirmation dialog.
	(ip_download_cur): Use it for the progress title.
	(uninstall_package): Use it for the confirmation dialog.

2008-06-11  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.16

	* src/util.cc (package_info_func): Hide epoch of version (N86191).

	* src/apt-worker.cc (AptWorker::Initialize): Add "--force-optold"
	to dpkg options.

2008-06-09  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.15

	* src/log.cc (save_log_do_nothing): New, used as the continuation
	for all calls to annoy_user_with_gnome_vfs_result so that the URI
	is not freed prematurely (N80933).
	(save_log): Set success to false when gnome_vfs_create failed.  Do
	not use save_log_cont_2, free uri explicitly at then end.
	(save_log_cont_2): Removed.

2008-06-06  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.14

2008-06-05  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log_cont): Take care of setting the value for
	last_save_log_dir to the last used one only when the process
	succeeded, and empty it when it failed (N80933).
	(save_log): Remove the previously stored dir here too if failed
	because of a GNOME_VFS_ERROR_NOT_FOUND error (N80933).

2008-06-04  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/update-notifier-conf.h: Defined the constant
	AVAILABLE_UPDATES_FILE_NAME (N85812).

	* src/update-notifier.c (osso_rpc_handler): Don't ignore it the
	first time that the alarm goes off (N85812).
	(handle_inotify): Use AVAILABLE_UPDATES_FILE_NAME instead of a
	hardcoded string (N85812).
