@@ -1,8 +1,8 @@
 hildon-application-manager (1:2.1.17~unreleased) unstable; urgency=low
 
-  * 
+  * Fixes: MB#3503
 
- -- Marius Vollmer <marius.vollmer@nokia.com>  Wed, 11 Jun 2008 20:10:22 +0300
+ -- Marius Vollmer <marius.vollmer@nokia.com>  Wed, 22 Aug 2008 20:10:22 +0300
 
 hildon-application-manager (1:2.1.16) unstable; urgency=low
 
